--- a/module_2/hw-12/personal_finance/finance/templates/finance/project-detail.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/project-detail.html
@@ -111,32 +111,39 @@
     </form>
   </div>
 </div>
-<div id="expenseFilter" class="modal">
+<div id="expenseFilter" class="modal" >
   <div class="modal-content">
-    <h4>Add Expense</h4>
+    <h4>Filter</h4>
     <form method="post">
       {% csrf_token %}
-      <label for="title">Title </label>
-      <input name="title" id="title" />
+      <input type="text" class="datepicker">
+<!--      <label for="start">Start date:</label>-->
+<!--      <input type="date" id="start" name="start"-->
+<!--             value="01.01.2021"-->
+<!--             min="2018-01-01" max="2021-12-31">-->
 
-      <label for="amount"> Amount </label>
-      <input name="amount" id="amount" />
-
-      <select name="category">
-        {% for category in category_list %}
-        <option>{{category.name}}</option>
-        {% endfor %}
-      </select>
-      <button type="submit" class="btn">Add</button>
+<!--<label for="end">End date:</label>-->
+<!--<input type="date" id="end" name="end"-->
+<!--       min="2018-01-01" max="2021-12-31">-->
+<button type="submit" class="btn">Setup</button>
     </form>
   </div>
 </div>
 <script>
+
+<!--Add expense Modal-->
   let elem = document.querySelector(".modal");
   let instance = M.Modal.init(elem);
 
   let elem2 = document.querySelector("select");
   let instance2 = M.FormSelect.init(elem2);
+
+<!--Add expanse filter-->
+
+  let elem1 = document.querySelector("#expenseFilter");
+  let instance1 = M.Modal.init(elem1);
+
+
 
   function deleteExpense(e) {
     let id = e.dataset.id;
