--- a/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
@@ -2,6 +2,10 @@
 
 <div class="container">
   <h1>My projects</h1>
+  <a href="/add" class="btn-large grey">
+    <i class="material-icons white-text left">add_circle_outline</i>
+    <span class="bold">Add project</span>
+  </a>
   <hr />
 
   <div class="row">
@@ -10,6 +14,13 @@
       <div class="card-panel">
         <h5>{{ project.name }}</h5>
         <a href="{% url 'detail' project.slug %}" class="btn">Open</a>
+        <a
+          class="delete-icon"
+          onclick="deleteProject(this)"
+          data-id="{{project.id}}"
+        >
+          <i class="material-icons red-text right">delete</i>
+        </a>
       </div>
     </div>
     {% empty %}
@@ -25,5 +36,24 @@
 
   {% endfor %}
 </div>
+
+<script>
+  function deleteProject(e) {
+    let id = e.dataset.id;
+    console.log(id);
+    e.closest("div").remove();
+
+    fetch("", {
+      method: "DELETE",
+      headers: {
+        "X-CSRFToken": "{{csrf_token}}",
+      },
+      body: JSON.stringify({
+        id: id,
+      }),
+      credentials: "same-origin",
+    });
+  }
+</script>
 
 {% endblock %}
