filter added but don't work

--- a/module_2/hw-12/personal_finance/finance/templates/finance/project-detail.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/project-detail.html
@@ -104,7 +104,7 @@
       <input name="title" id="title" />
 
       <label for="amount"> Amount </label>
-      <input name="amount" id="amount" />
+      <input name="amount" id="amount" autocomplete="off" />
 
       <label for="dateExpense">Date expense:</label>
       <input
