--- a/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
@@ -2,10 +2,12 @@
 
 <div class="container">
   <h1>My projects</h1>
+  {% if project_list %}
   <a href="/add" class="btn-large grey">
     <i class="material-icons white-text left">add_circle_outline</i>
     <span class="bold">Add project</span>
   </a>
+  {% endif %}
   <hr />
 
   <div class="row">
@@ -28,7 +30,7 @@
 
     <div class="noproject-wrapper center">
       <h3 class="grey-text">Sorry, you don't have any project, yet</h3>
-      <a href="" class="btn-large grey">
+      <a href="/add" class="btn-large grey">
         <i class="material-icons white-text left">add_circle_outline</i>
         <span class="bold">Add project</span>
       </a>
