completed, but checkbox isn't working

--- a/module_2/hw-12/personal_finance/finance/templates/finance/add-project.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/add-project.html
@@ -8,7 +8,7 @@
     <input type="text" name="categoryInput" id="categoryInput" />
     <input type="hidden" name="categoriesString" />
     <ul id="categoriesContainer"></ul>
-    <button type="submit" class="btn">Start project</button>
+    <button type="submit" class="btn">Save</button>
   </form>
 </div>
 <script src="../../static/js/index.js"></script>
