--- a/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
@@ -1,11 +1,11 @@
 {% extends 'finance/base.html'%} {% block content %}
 
 <div class="container">
-  <h1>My projects</h1>
+  <h1>My finance</h1>
   {% if project_list %}
   <a href="/add" class="btn-large grey">
     <i class="material-icons white-text left">add_circle_outline</i>
-    <span class="bold">Add project</span>
+    <span class="bold">Add budget</span>
   </a>
   {% endif %}
   <hr />
@@ -32,7 +32,7 @@
       <h3 class="grey-text">Sorry, you don't have any project, yet</h3>
       <a href="/add" class="btn-large grey">
         <i class="material-icons white-text left">add_circle_outline</i>
-        <span class="bold">Add project</span>
+        <span class="bold">Add budget</span>
       </a>
     </div>
   </div>
