--- a/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
+++ b/module_2/hw-12/personal_finance/finance/templates/finance/project-list.html
@@ -29,7 +29,7 @@
     {% empty %}
 
     <div class="noproject-wrapper center">
-      <h3 class="grey-text">Sorry, you don't have any project, yet</h3>
+      <h3 class="grey-text">You don't have any finance operation!</h3>
       <a href="/add" class="btn-large grey">
         <i class="material-icons white-text left">add_circle_outline</i>
         <span class="bold">Add budget</span>
